# pointcloud-generator

./: README.md  setup.py
point_cloud_gen/: gen_point_cloud.py  package.xml  setup.py
point_cloud_gen/point_cloud_gen/: gen_point_cloud.py  read_point_cloud.py
pointcloud_proc_cpp/: CMakeLists.txt  package.xml
pointcloud_proc_cpp/src/: gen_pointcloud.cpp  gen_pointcloud.hpp  read_depth_image.cpp  run_gen_pointcloud.cpp  test_pointcloud.cpp
